--- a/StoreAndDeliverUI/src/app/layout/dialogs/register-dialog/register-dialog/register-dialog.component.html
+++ b/StoreAndDeliverUI/src/app/layout/dialogs/register-dialog/register-dialog/register-dialog.component.html
@@ -1,80 +1,88 @@
-<h1 mat-dialog-title>Registration</h1>
+<h1 mat-dialog-title>{{ "registration.registration" | translate }}</h1>
 <div mat-dialog-content>
   <form [formGroup]="form">
     <div class="row">
       <div class="col-lg-5 col-12">
         <mat-form-field>
-          <mat-label>Username</mat-label>
+          <mat-label>{{ "common.userName" | translate }} </mat-label>
           <input
             matInput
             type="text"
             formControlName="userName"
-            placeholder="username"
+            placeholder="{{ 'common.userName' | translate }}"
             required
           />
           <mat-error *ngIf="userName?.invalid && userName?.touched">
-            Username is required
+            {{ "validation.userNameRequired" | translate }}
           </mat-error>
         </mat-form-field>
       </div>
       <div class="col-lg-5">
         <mat-form-field>
-          <mat-label>Email</mat-label>
+          <mat-label>{{ "common.email" | translate }}</mat-label>
           <input
             matInput
             type="text"
             formControlName="email"
-            placeholder="email"
+            placeholder="{{ 'common.email' | translate }}"
             required
           />
-          <mat-error *ngIf="email?.invalid">{{
-            getEmailErrorMessage()
+          <mat-error *ngIf="email?.touched && email?.errors?.required">{{
+            "validation.emailRequired" | translate
+          }}</mat-error>
+          <mat-error *ngIf="email?.touched && email?.errors?.email">{{
+            "validation.invalidEmail" | translate
           }}</mat-error>
         </mat-form-field>
       </div>
       <div class="col-lg-5">
         <mat-form-field>
-          <mat-label>Password</mat-label>
+          <mat-label>{{ "common.password" | translate }}</mat-label>
           <input
             matInput
             type="password"
             formControlName="password"
-            placeholder="password"
+            placeholder="{{ 'common.password' | translate }}"
             required
           />
           <mat-error *ngIf="password?.invalid && password?.touched">
-            Password is required
+            {{ "validation.passwordRequired" | translate }}
           </mat-error>
         </mat-form-field>
       </div>
       <div class="col-lg-5">
         <mat-form-field>
-          <mat-label>Confirm Password</mat-label>
+          <mat-label>{{ "common.confirmPassword" | translate }}</mat-label>
           <input
             matInput
             type="password"
             formControlName="confirmPassword"
-            placeholder="password"
+            placeholder="{{ 'common.confirmPassword' | translate }}"
             required
           />
           <mat-error
             *ngIf="confirmPassword?.invalid && confirmPassword?.touched"
           >
-            Confirm password is required
+            {{ "validation.confirmPasswordRequired" | translate }}
           </mat-error>
         </mat-form-field>
       </div>
     </div>
   </form>
   <div *ngIf="isUserNameAlreadyTaken" class="alert alert-danger">
-    Username has already been taken
+    {{ "registration.nameAlreadyTaken" | translate }}
   </div>
   <div *ngIf="isPasswordsMismatched" class="alert alert-danger">
-    Password and confirm password must be equal.
+    {{ "registration.passwordsNotEqual" | translate }}
+  </div>
+  <div *ngIf="isPasswordWeak" class="alert alert-danger">
+    {{ "registration.weakPassword" | translate }}
   </div>
 </div>
 <div mat-dialog-actions>
-  <button mat-button mat-dialog-close="yes">Close</button>
+  <button mat-button mat-dialog-close="yes">
+    {{ "common.close" | translate }}
+  </button>
   <button
     type="submit"
     mat-button
@@ -82,6 +90,6 @@
     (click)="onRegisterButtonClick()"
   >
     <app-spinner *ngIf="isAddingUser" [diameter]="25"></app-spinner>
-    <span *ngIf="!isAddingUser">Register</span>
+    <span *ngIf="!isAddingUser">{{ "registration.register" | translate }}</span>
   </button>
 </div>
