Add sidenav menu, refactor routing, add cargo-request component

--- a/StoreAndDeliverUI/src/app/layout/navbar/navbar.component.html
+++ b/StoreAndDeliverUI/src/app/layout/navbar/navbar.component.html
@@ -25,9 +25,9 @@
         <a
           class="nav-link"
           id="dashboard"
-          routerLink="/dashboard"
+          routerLink="/about-us"
           routerLinkActive="active current"
-          >{{ "navbar.dashboard" | translate }}</a
+          >{{ "navbar.aboutUs" | translate }}</a
         >
       </li>
     </ul>
@@ -56,4 +56,3 @@
     </ul>
   </div>
 </nav>
-<router-outlet></router-outlet>
