Fix sidebar animation

--- a/StoreAndDeliverUI/src/app/layout/sidenav/sidenav.component.html
+++ b/StoreAndDeliverUI/src/app/layout/sidenav/sidenav.component.html
@@ -6,8 +6,8 @@
       mode="side"
       opened
       [ngStyle]="{ 'width.em': sidenavWidth }"
-      (mouseenter)="increase()"
-      (mouseleave)="decrease()"
+      (mouseenter)="increase(sidenav)"
+      (mouseleave)="decrease(sidenav)"
       class="sidenav"
     >
       <mat-nav-list>
