--- a/StoreAndDeliverUI/src/app/features/cargo-requests/cargo-requests.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/cargo-requests.component.html
@@ -1,1 +1,21 @@
-<p>cargo-requests works!</p>
+<div class="main container-fluid p-3">
+  <h2>{{ "cargoRequest.header" | translate }}</h2>
+  <a href="#">{{ "cargoRequest.reviewRequests" | translate }}</a>
+  <div class="container-fluid d-flex justify-content-center m-1 w-100">
+    <mat-tab-group class="w-100" dynamicHeight>
+      <mat-tab label="{{ 'cargoRequest.requestType' | translate }}">
+        <div class="mt-3">
+          <app-request-type-form-container></app-request-type-form-container>
+        </div>
+      </mat-tab>
+      <mat-tab label="{{ 'cargoRequest.requestDetails' | translate }}">
+        <div class="mt-3">
+          <app-request-details-form-container></app-request-details-form-container>
+        </div>
+      </mat-tab>
+      <mat-tab label="{{ 'cargoRequest.cargoDetails' | translate }}">
+        <div class="mt-3">Content 1</div>
+      </mat-tab>
+    </mat-tab-group>
+  </div>
+</div>
