Add cargo form with i18n

--- a/StoreAndDeliverUI/src/app/features/cargo-requests/cargo-requests.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/cargo-requests.component.html
@@ -14,7 +14,9 @@
         </div>
       </mat-tab>
       <mat-tab label="{{ 'cargoRequest.cargoDetails' | translate }}">
-        <div class="mt-3">Content 1</div>
+        <div class="mt-3">
+          <app-cargo-form-container></app-cargo-form-container>
+        </div>
       </mat-tab>
     </mat-tab-group>
   </div>
