--- a/StoreAndDeliverUI/src/app/features/cargo-requests/cargo-requests.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/cargo-requests.component.html
@@ -18,6 +18,13 @@
           <app-cargo-form-container></app-cargo-form-container>
         </div>
       </mat-tab>
+      <mat-tab label="{{ 'cargoRequest.indicatorsSettings' | translate }}">
+        <div class="mt-3">
+          <ng-template matTabContent>
+            <app-indicators-setup-container></app-indicators-setup-container>
+          </ng-template>
+        </div>
+      </mat-tab>
     </mat-tab-group>
   </div>
 </div>
