--- a/StoreAndDeliverUI/src/app/layout/sidenav/sidenav.component.html
+++ b/StoreAndDeliverUI/src/app/layout/sidenav/sidenav.component.html
@@ -9,6 +9,7 @@
       (mouseenter)="increase(sidenav)"
       (mouseleave)="decrease(sidenav)"
       class="sidenav"
+      fixedInViewport
     >
       <mat-nav-list>
         <mat-list-item routerLink="/dashboard" routerLinkActive="active">
