--- a/StoreAndDeliverUI/src/app/features/cargo-requests/cargo-requests.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/cargo-requests.component.html
@@ -5,17 +5,25 @@
     <mat-tab-group class="w-100" dynamicHeight>
       <mat-tab label="{{ 'cargoRequest.requestType' | translate }}">
         <div class="mt-3">
-          <app-request-type-form-container></app-request-type-form-container>
+          <app-request-type-form-container
+            [request]="request"
+          ></app-request-type-form-container>
         </div>
       </mat-tab>
       <mat-tab label="{{ 'cargoRequest.requestDetails' | translate }}">
         <div class="mt-3">
-          <app-request-details-form-container></app-request-details-form-container>
+          <ng-template matTabContent>
+            <app-request-details-form-container
+              [request]="request"
+            ></app-request-details-form-container>
+          </ng-template>
         </div>
       </mat-tab>
       <mat-tab label="{{ 'cargoRequest.cargoDetails' | translate }}">
         <div class="mt-3">
-          <app-cargo-form-container></app-cargo-form-container>
+          <ng-template matTabContent>
+            <app-cargo-form-container></app-cargo-form-container>
+          </ng-template>
         </div>
       </mat-tab>
       <mat-tab label="{{ 'cargoRequest.indicatorsSettings' | translate }}">
