--- a/StoreAndDeliverUI/src/app/features/cargo-requests/forms/request-details-form/request-details-form.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/forms/request-details-form/request-details-form.component.html
@@ -1,20 +1,17 @@
 <form [formGroup]="form">
-  <h3 class="mb-0">{{ "cargoRequest.fromAddress" | translate }}</h3>
-  <app-address-form></app-address-form>
-  <h3 class="mb-0">{{ "cargoRequest.toAddress" | translate }}</h3>
-  <app-address-form></app-address-form>
-  <h3 class="mb-1">{{ "cargoRequest.requiredDates" | translate }}</h3>
   <div class="row">
     <div class="col-lg-4 col-12">
       <mat-form-field>
         <mat-label>{{ "cargoRequest.deliverCargoBy" | translate }}</mat-label>
         <input
           matInput
-          type="date"
           formControlName="carryOutBefore"
           placeholder="{{ 'cargoRequest.deliverCargoBy' | translate }}"
           required
+          [matDatepicker]="picker"
         />
+        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+        <mat-datepicker #picker></mat-datepicker>
         <mat-error *ngIf="carryOutBefore?.invalid && carryOutBefore?.touched">
           {{ "validation.requiredField" | translate }}
         </mat-error>
@@ -27,11 +24,16 @@
         <mat-label>{{ "cargoRequest.storeFromDate" | translate }}</mat-label>
         <input
           matInput
-          type="date"
           formControlName="storeFromDate"
           placeholder="{{ 'cargoRequest.storeFromDate' | translate }}"
           required
+          [matDatepicker]="picker2"
         />
+        <mat-datepicker-toggle
+          matSuffix
+          [for]="picker2"
+        ></mat-datepicker-toggle>
+        <mat-datepicker #picker2></mat-datepicker>
         <mat-error *ngIf="storeFromDate?.invalid && storeFromDate?.touched">
           {{ "validation.requiredField" | translate }}
         </mat-error>
@@ -42,11 +44,16 @@
         <mat-label>{{ "cargoRequest.storeByDate" | translate }}</mat-label>
         <input
           matInput
-          type="date"
           formControlName="storeUntilDate"
           placeholder="{{ 'cargoRequest.storeByDate' | translate }}"
           required
+          [matDatepicker]="picker3"
         />
+        <mat-datepicker-toggle
+          matSuffix
+          [for]="picker3"
+        ></mat-datepicker-toggle>
+        <mat-datepicker #picker3></mat-datepicker>
         <mat-error *ngIf="storeUntilDate?.invalid && storeUntilDate?.touched">
           {{ "validation.requiredField" | translate }}
         </mat-error>
@@ -56,6 +63,7 @@
   <div class="row">
     <div class="col-lg-4 col-12">
       <mat-checkbox
+        formControlName="isSecurityModeEnabled"
         matTooltip="{{ 'cargoRequest.securityModeToolTip' | translate }}"
         >{{ "cargoRequest.securityMode" | translate }}</mat-checkbox
       >
