--- a/StoreAndDeliverUI/src/app/layout/sidenav/sidenav.component.scss
+++ b/StoreAndDeliverUI/src/app/layout/sidenav/sidenav.component.scss
@@ -6,6 +6,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      padding-top: 70px;
       .active {
         background-color: rgba(9, 30, 66, 0.25);
       }
