--- a/StoreAndDeliverUI/src/app/features/cargo-requests/containers/cargo-form-container/cargo-form-container.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/containers/cargo-form-container/cargo-form-container.component.html
@@ -1,3 +1,7 @@
 <div class="main p-3">
-  <app-cargo-form></app-cargo-form>
+  <app-cargo-form
+    #cargoForm
+    [initialCargo]="cargo"
+    (valueChanges)="onValueChanges()"
+  ></app-cargo-form>
 </div>
