--- a/StoreAndDeliverUI/src/app/features/cargo-requests/containers/indicators-setup-container/indicators-setup-container.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/containers/indicators-setup-container/indicators-setup-container.component.html
@@ -1,3 +1,8 @@
 <div class="main p-3">
-  <app-indicators-setup-form></app-indicators-setup-form>
+  <app-indicators-setup-form
+    #indicatorsSetupForm
+    [initialCargo]="cargo"
+    [environmentSettings]="settings"
+    (valueChanges)="onValueChanges()"
+  ></app-indicators-setup-form>
 </div>
