--- a/StoreAndDeliverUI/src/app/features/cargo-requests/forms/cargo-form/cargo-form.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/forms/cargo-form/cargo-form.component.html
@@ -8,7 +8,7 @@
 <form [formGroup]="form">
   <div formArrayName="cargo" class="container-fluid p-3 d-flex flex-column">
     <div
-      *ngFor="let route of cargo.controls; let i = index"
+      *ngFor="let cargo of cargo.controls; let i = index"
       [formGroupName]="i"
       class="cargo-wrapper p-2 mr-2 mb-2"
     >
@@ -28,7 +28,7 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-lg-3 col-md-6 col-sm-8 col-12">
+        <div class="col-lg-3 col-md-4 col-12">
           <mat-form-field appearance="fill">
             <mat-label>{{ "cargoRequest.weight" | translate }}</mat-label>
             <input
@@ -47,7 +47,7 @@
             >
           </mat-form-field>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+        <div class="col-lg-3 col-md-4 col-12">
           <mat-form-field appearance="fill">
             <mat-label>{{ "cargoRequest.amount" | translate }}</mat-label>
             <input
@@ -66,7 +66,7 @@
             >
           </mat-form-field>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+        <div class="col-lg-3 col-md-4 col-12">
           <mat-form-field appearance="fill">
             <mat-label>{{ "cargoRequest.length" | translate }}</mat-label>
             <input
@@ -85,7 +85,7 @@
             >
           </mat-form-field>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+        <div class="col-lg-3 col-md-4 col-12">
           <mat-form-field appearance="fill" [style.width.px]="185">
             <mat-label>{{ "cargoRequest.width" | translate }}</mat-label>
             <input
@@ -104,7 +104,7 @@
             >
           </mat-form-field>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+        <div class="col-lg-3 col-md-4 col-12">
           <mat-form-field appearance="fill">
             <mat-label>{{ "cargoRequest.height" | translate }}</mat-label>
             <input
@@ -123,7 +123,7 @@
             >
           </mat-form-field>
         </div>
-        <div class="col-lg-3 col-md-4 col-sm-6 col-12">
+        <div class="col-lg-3 col-md-4 col-12">
           <mat-form-field appearance="fill">
             <mat-label>{{ "cargoRequest.description" | translate }}</mat-label>
             <textarea
