--- a/StoreAndDeliverUI/src/app/features/cargo-requests/forms/request-details-form/request-details-form.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/forms/request-details-form/request-details-form.component.html
@@ -1,5 +1,5 @@
 <form [formGroup]="form">
-  <div class="row">
+  <div class="row" *ngIf="!isStoreRequest()">
     <div class="col-lg-4 col-12">
       <mat-form-field>
         <mat-label>{{ "cargoRequest.deliverCargoBy" | translate }}</mat-label>
@@ -18,7 +18,7 @@
       </mat-form-field>
     </div>
   </div>
-  <div class="row">
+  <div class="row" *ngIf="isStoreRequest()">
     <div class="col-lg-4 col-12">
       <mat-form-field>
         <mat-label>{{ "cargoRequest.storeFromDate" | translate }}</mat-label>
