--- a/StoreAndDeliverUI/src/app/features/cargo-requests/forms/indicator-item-form/indicator-item-form.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/forms/indicator-item-form/indicator-item-form.component.html
@@ -1,25 +1,35 @@
 <form [formGroup]="form">
   <div formArrayName="settings" class="container-fluid p-3 d-flex flex-column">
+    <div class="row">
+      <div class="col-lg-3 mb-3">
+        <button mat-raised-button (click)="onAddSettingClick()">
+          Add Setting
+        </button>
+      </div>
+    </div>
     <div
       *ngFor="let setting of settings.controls; let i = index"
       [formGroupName]="i"
       class="setting-wrapper p-2 mr-2 mb-2"
     >
-      <div class="row">
-        <!-- <div class="col-lg-3 d-flex p-3">
-          {{ "common.cargo" | translate }} №{{ cargoNumber + 1 }}
-        </div> -->
-        <div class="col-lg-3 mb-3">
-          <button mat-raised-button (click)="onAddSettingClick()">
-            Add Setting
-          </button>
-        </div>
+      <div>
+        <button
+          *ngIf="i != 0"
+          class="m-3"
+          mat-raised-button
+          (click)="onDeleteSettingClick(i)"
+        >
+          {{ "common.delete" | translate }}
+        </button>
       </div>
       <div class="row d-flex">
         <div class="col-lg-12 col-md-12 col-12">
           <mat-form-field appearance="fill" [style.width.%]="100">
             <mat-label>Setting</mat-label>
-            <mat-select formControlName="environmentSettingId">
+            <mat-select
+              formControlName="environmentSettingId"
+              (selectionChange)="onSelectionChange()"
+            >
               <mat-option
                 *ngFor="let setting of environmentSettings"
                 [value]="setting.id"
@@ -27,10 +37,17 @@
                 {{ setting.name }}
               </mat-option>
             </mat-select>
+            <mat-error
+              *ngIf="
+                getCurrentFormControl(i, 'environmentSettingId')?.touched &&
+                getCurrentFormControl(i, 'environmentSettingId')?.invalid
+              "
+              >{{ "validation.requiredField" | translate }}</mat-error
+            >
           </mat-form-field>
         </div>
         <div class="col-lg-6 col-md-12 col-12">
-          <mat-form-field appearance="fill">
+          <mat-form-field>
             <mat-label>Min value</mat-label>
             <input
               formControlName="minValue"
@@ -38,6 +55,7 @@
               matInput
               type="number"
               min="0"
+              (focusout)="onFocusOut()"
             />
             <mat-error
               *ngIf="
@@ -49,7 +67,7 @@
           </mat-form-field>
         </div>
         <div class="col-lg-6 col-md-12 col-12">
-          <mat-form-field appearance="fill">
+          <mat-form-field>
             <mat-label>Max value</mat-label>
             <input
               formControlName="maxValue"
@@ -57,6 +75,7 @@
               matInput
               type="number"
               min="0"
+              (focusout)="onFocusOut()"
             />
             <mat-error
               *ngIf="
