--- a/StoreAndDeliverUI/src/app/features/cargo-requests/forms/indicator-item-form/indicator-item-form.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/forms/indicator-item-form/indicator-item-form.component.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-3 mb-3">
         <button mat-raised-button (click)="onAddSettingClick()">
-          Add Setting
+          {{ "cargoRequest.addSetting" | translate }}
         </button>
       </div>
     </div>
@@ -25,7 +25,7 @@
       <div class="row d-flex">
         <div class="col-lg-12 col-md-12 col-12">
           <mat-form-field appearance="fill" [style.width.%]="100">
-            <mat-label>Setting</mat-label>
+            <mat-label>{{ "common.setting" | translate }}</mat-label>
             <mat-select
               formControlName="environmentSettingId"
               (selectionChange)="onSelectionChange()"
@@ -48,7 +48,7 @@
         </div>
         <div class="col-lg-6 col-md-12 col-12">
           <mat-form-field>
-            <mat-label>Min value</mat-label>
+            <mat-label>{{ "common.minValue" | translate }}</mat-label>
             <input
               formControlName="minValue"
               required
@@ -68,7 +68,7 @@
         </div>
         <div class="col-lg-6 col-md-12 col-12">
           <mat-form-field>
-            <mat-label>Max value</mat-label>
+            <mat-label>{{ "common.maxValue" | translate }}</mat-label>
             <input
               formControlName="maxValue"
               required
