--- a/StoreAndDeliverUI/src/app/features/cargo-requests/cargo-requests.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/cargo-requests.component.html
@@ -6,6 +6,7 @@
       <mat-tab label="{{ 'cargoRequest.requestType' | translate }}">
         <div class="mt-3">
           <app-request-type-form-container
+            #requestTypeForm
             [request]="request"
           ></app-request-type-form-container>
           <button
@@ -18,10 +19,14 @@
           </button>
         </div>
       </mat-tab>
-      <mat-tab label="{{ 'cargoRequest.requestDetails' | translate }}">
+      <mat-tab
+        label="{{ 'cargoRequest.requestDetails' | translate }}"
+        [disabled]="isTabDisabled(0)"
+      >
         <div class="mt-3">
           <ng-template matTabContent>
             <app-request-details-form-container
+              #requestDetailsForm
               [request]="request"
             ></app-request-details-form-container>
             <button
@@ -35,16 +40,21 @@
               mat-raised-button
               color="primary"
               (click)="onNavigateTabButtonClick(tabGroup, true)"
+              [disabled]="!requestDetailsFormComponent?.isFormValid()"
             >
               {{ "common.next" | translate }}
             </button>
           </ng-template>
         </div>
       </mat-tab>
-      <mat-tab label="{{ 'cargoRequest.cargoDetails' | translate }}">
+      <mat-tab
+        label="{{ 'cargoRequest.cargoDetails' | translate }}"
+        [disabled]="isTabDisabled(1)"
+      >
         <div class="mt-3">
           <ng-template matTabContent>
             <app-cargo-form-container
+              #cargoForm
               [cargo]="cargo"
             ></app-cargo-form-container>
             <button
@@ -58,16 +68,21 @@
               mat-raised-button
               color="primary"
               (click)="onNavigateTabButtonClick(tabGroup, true)"
+              [disabled]="!cargoFormComponent?.isFormValid()"
             >
               {{ "common.next" | translate }}
             </button>
           </ng-template>
         </div>
       </mat-tab>
-      <mat-tab label="{{ 'cargoRequest.indicatorsSettings' | translate }}">
+      <mat-tab
+        label="{{ 'cargoRequest.indicatorsSettings' | translate }}"
+        [disabled]="isTabDisabled(2)"
+      >
         <div class="mt-3">
           <ng-template matTabContent>
             <app-indicators-setup-container
+              #indicatorsSetupForm
               [cargo]="cargo"
             ></app-indicators-setup-container>
             <button
@@ -76,6 +91,13 @@
               (click)="onNavigateTabButtonClick(tabGroup, false)"
             >
               {{ "common.back" | translate }}
+            </button>
+            <button
+              mat-raised-button
+              color="primary"
+              [disabled]="!indicatorsSetupFormComponent?.isFormValid()"
+            >
+              {{ "common.submit" | translate }}
             </button>
           </ng-template>
         </div>
