--- a/StoreAndDeliverUI/src/app/layout/navbar/navbar.component.html
+++ b/StoreAndDeliverUI/src/app/layout/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar fixed-top navbar-expand-md navbar-dark">
+<nav class="navbar fixed-top navbar-expand-md navbar-dark py-0">
   <a class="navbar-brand" href="#">
     <img
       src="assets/images/logo.png"
