--- a/StoreAndDeliverUI/src/app/features/cargo-requests/cargo-requests.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/cargo-requests.component.html
@@ -3,7 +3,7 @@
   <a href="#">{{ "cargoRequest.reviewRequests" | translate }}</a>
   <div class="container-fluid d-flex justify-content-center m-1 w-100">
     <mat-tab-group class="w-100" dynamicHeight #tabGroup>
-      <mat-tab label="{{ 'cargoRequest.requestType' | translate }}">
+      <mat-tab label="{{ 'cargoRequest.requestType' | translate }}" disabled>
         <div class="mt-3">
           <app-request-type-form-container
             #requestTypeForm
@@ -19,10 +19,7 @@
           </button>
         </div>
       </mat-tab>
-      <mat-tab
-        label="{{ 'cargoRequest.requestDetails' | translate }}"
-        [disabled]="isTabDisabled(0)"
-      >
+      <mat-tab label="{{ 'cargoRequest.requestDetails' | translate }}" disabled>
         <div class="mt-3">
           <ng-template matTabContent>
             <app-request-details-form-container
@@ -47,10 +44,7 @@
           </ng-template>
         </div>
       </mat-tab>
-      <mat-tab
-        label="{{ 'cargoRequest.cargoDetails' | translate }}"
-        [disabled]="isTabDisabled(1)"
-      >
+      <mat-tab label="{{ 'cargoRequest.cargoDetails' | translate }}" disabled>
         <div class="mt-3">
           <ng-template matTabContent>
             <app-cargo-form-container
@@ -77,7 +71,7 @@
       </mat-tab>
       <mat-tab
         label="{{ 'cargoRequest.indicatorsSettings' | translate }}"
-        [disabled]="isTabDisabled(2)"
+        disabled
       >
         <div class="mt-3">
           <ng-template matTabContent>
