--- a/StoreAndDeliverUI/src/app/features/cargo-requests/cargo-requests.component.scss
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/cargo-requests.component.scss
@@ -1,3 +1,6 @@
 .main {
   min-height: calc(100vh - 55px);
 }
+::ng-deep .mat-tab-list .mat-tab-labels .mat-tab-label-active {
+  color: rgb(43, 41, 41);
+}
