--- a/StoreAndDeliverUI/src/app/features/cargo-requests/forms/address-form/address-form.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/forms/address-form/address-form.component.html
@@ -1,4 +1,5 @@
-<form [formGroup]="form">
+<form [formGroup]="form" autocomplete="off">
+  <input autocomplete="false" name="hidden" type="text" style="display: none" />
   <div class="row">
     <div class="col-lg-4 col-12">
       <mat-form-field>
@@ -7,9 +8,15 @@
           matInput
           type="text"
           formControlName="country"
+          [matAutocomplete]="autoCountry"
           placeholder="{{ 'cargoRequest.country' | translate }}"
           required
         />
+        <mat-autocomplete autoActiveFirstOption #autoCountry="matAutocomplete">
+          <mat-option *ngFor="let country of countryNames" [value]="country">
+            {{ country }}
+          </mat-option>
+        </mat-autocomplete>
         <mat-error *ngIf="country?.invalid && country?.touched">
           {{ "validation.requiredField" | translate }}
         </mat-error>
@@ -22,9 +29,15 @@
           matInput
           type="text"
           formControlName="city"
+          [matAutocomplete]="autoCity"
           placeholder="{{ 'cargoRequest.city' | translate }}"
           required
         />
+        <mat-autocomplete autoActiveFirstOption #autoCity="matAutocomplete">
+          <mat-option *ngFor="let city of cityNames" [value]="city">
+            {{ city }}
+          </mat-option>
+        </mat-autocomplete>
         <mat-error *ngIf="city?.invalid && city?.touched">
           {{ "validation.requiredField" | translate }}
         </mat-error>
