Add storing current units types

--- a/StoreAndDeliverUI/src/app/features/cargo-requests/cargo-requests.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/cargo-requests.component.html
@@ -42,7 +42,7 @@
           </button>
         </div>
       </mat-tab>
-      <mat-tab label="{{ 'cargoRequest.cargoDetails' | translate }}" disabled>
+      <mat-tab label="{{ 'cargoRequest.cargoDetails' | translate }}">
         <div class="mt-3">
           <app-cargo-form-container
             #cargoForm
