--- a/StoreAndDeliverUI/src/app/features/cargo-requests/forms/unit-selection-form/unit-selection-form.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/forms/unit-selection-form/unit-selection-form.component.html
@@ -1,7 +1,7 @@
 <form [formGroup]="form">
   <mat-form-field>
     <mat-label>{{ header }}</mat-label>
-    <mat-select formControlName="unit">
+    <mat-select formControlName="unit" (selectionChange)="onSelectionChange()">
       <mat-option *ngFor="let option of options" [value]="option">
         {{ getOptionDisplayName(option) }}
       </mat-option>
