--- a/StoreAndDeliverUI/src/app/layout/navbar/navbar.component.html
+++ b/StoreAndDeliverUI/src/app/layout/navbar/navbar.component.html
@@ -33,7 +33,7 @@
     </ul>
     <ul class="navbar-nav ml-auto mt-lg-0">
       <li class="nav-item">
-        <a class="nav-link" (click)="onLanguageClick('ua')">
+        <a class="nav-link language" (click)="onLanguageClick('ua')">
           <img
             src="assets/images/ukraine.png"
             class="img"
@@ -44,7 +44,7 @@
     </ul>
     <ul class="navbar-nav mt-lg-0">
       <li class="nav-item">
-        <a class="nav-link" (click)="onLanguageClick('en')"
+        <a class="nav-link language" (click)="onLanguageClick('en')"
           ><img src="assets/images/usa.png" class="img" alt="USA" width="30px"
         /></a>
       </li>
