--- a/StoreAndDeliverUI/src/app/features/cargo-requests/forms/request-details-form/request-details-form.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/forms/request-details-form/request-details-form.component.html
@@ -9,6 +9,7 @@
           placeholder="{{ 'cargoRequest.deliverCargoBy' | translate }}"
           required
           [matDatepicker]="picker"
+          [min]="todayDate"
         />
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
@@ -28,6 +29,7 @@
           placeholder="{{ 'cargoRequest.storeFromDate' | translate }}"
           required
           [matDatepicker]="picker2"
+          [min]="todayDate"
         />
         <mat-datepicker-toggle
           matSuffix
@@ -48,6 +50,7 @@
           placeholder="{{ 'cargoRequest.storeByDate' | translate }}"
           required
           [matDatepicker]="picker3"
+          [min]="todayDate"
         />
         <mat-datepicker-toggle
           matSuffix
