--- a/StoreAndDeliverUI/src/app/features/cargo-requests/forms/request-details-form/request-details-form.component.html
+++ b/StoreAndDeliverUI/src/app/features/cargo-requests/forms/request-details-form/request-details-form.component.html
@@ -63,7 +63,7 @@
       </mat-form-field>
     </div>
   </div>
-  <div class="row">
+  <div class="row" *ngIf="isStoreRequest()">
     <div class="col-lg-4 col-12">
       <mat-checkbox
         formControlName="isSecurityModeEnabled"
